try to fix sonar
Signed-off-by: Etienne LESOT <etienne.lesot@rte-france.com>