@@ -12,10 +12,7 @@ import com.powsybl.iidm.network.extensions.IdentifiableShortCircuit;
 import org.gridsuite.modification.dto.*;
 import org.gridsuite.modification.utils.NetworkCreation;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -74,8 +71,8 @@ class LineAttachToNewVoltageLevelTest extends AbstractNetworkModificationTest {
                 .ipMax(10.0)
                 .busbarCount(2)
                 .sectionCount(2)
-                .switchKinds(Arrays.asList(SwitchKind.BREAKER))
-                .couplingDevices(Arrays.asList(CouplingDeviceInfos.builder().busbarSectionId1("1A").busbarSectionId2("1B").build()))
+                .switchKinds(List.of(SwitchKind.BREAKER))
+                .couplingDevices(Collections.singletonList(CouplingDeviceInfos.builder().busbarSectionId1("1A").busbarSectionId2("1B").build()))
                 .properties(List.of(FreePropertyInfos.builder()
                         .added(true)
                         .name("newVoltageLevelProp")
@@ -141,7 +138,7 @@ class LineAttachToNewVoltageLevelTest extends AbstractNetworkModificationTest {
         assertEquals(100.0, attachmentPointVoltageLevel.getHighVoltageLimit(), 0.001);
         assertTrue(attachmentPointVoltageLevel.isFictitious());
 
-        IdentifiableShortCircuit identifiableShortCircuit = attachmentPointVoltageLevel.getExtension(IdentifiableShortCircuit.class);
+        IdentifiableShortCircuit<VoltageLevel> identifiableShortCircuit = attachmentPointVoltageLevel.getExtension(IdentifiableShortCircuit.class);
         assertNotNull(identifiableShortCircuit);
         assertEquals(5.0, identifiableShortCircuit.getIpMin(), 0.001);
         assertEquals(20.0, identifiableShortCircuit.getIpMax(), 0.001);
